--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<!-- une classe pour organiser toutes les autres, une classe pour chaque zone et des classes pour organiser les elements-->
+    <div class="tout">
+
+    <header>
+        <a href="file:///home/cecile/Documents/pjt_babel/index.html" ><img src="babbel.png" alt="accueil" class="logo"/></a>
+
+        <div class="zone1">
+            <input type="button" value="Decouvrir">
+            <input type="button" value="Telecharger">
+            <input type="button" value="Nous contacter">
+        </div>
+    </header>
+    <main>
+        <div class="zone2">
+        <input type="button" value="Telecharger">
+        </div>
+
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
